--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>11</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.4</version>
+        </dependency>
 
     </dependencies>
     <build>
@@ -104,27 +109,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-<!--            <plugin>-->
-<!--                <version>1.4.4</version>-->
-<!--                <groupId>com.jolira</groupId>-->
-<!--                <artifactId>onejar-maven-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <configuration>-->
-<!--                            <mainClass>szamlak.MainStarter</mainClass>-->
-<!--                            <attachToBuild>true</attachToBuild>-->
-<!--                            <filename>-->
-<!--                                szamlak.jar-->
-<!--                            </filename>-->
-<!--                        </configuration>-->
-<!--                        <goals>-->
-<!--                            <goal>one-jar</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
